More on tags (II)
- added context menu to tags treeview
- added drag & drop to tags treeview