@@ -136,6 +136,7 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-exports', 'javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
                 '--add-exports', 'javafx.media/com.sun.media.jfxmedia=ALL-UNNAMED',
                 '--add-exports', 'javafx.media/com.sun.media.jfxmedia.events=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
                 '--add-exports', 'javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
     ]
     
